# milestone1

./: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Command.h  CommandExpression.cpp  CommandExpression.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  Div.cpp  Div.h  Expression.h  ExpressionCreator.cpp  ExpressionCreator.h  IfCommand.cpp  IfCommand.h  LoopCommand.cpp  LoopCommand.h  Minus.cpp  Minus.h  Mult.cpp  Mult.h  Number.cpp  Number.h  OpenServerCommand.cpp  OpenServerCommand.h  Plus.cpp  Plus.h  PrintCommand.cpp  PrintCommand.h  Reader.cpp  Reader.h  Setter.cpp  Setter.h  SleepCommand.cpp  SleepCommand.h  SymbolTable.cpp  (+2 more)
